fix issue with gap on right in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   background-color: rgb(82, 82, 82);
 } */
 
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -90,3 +92,48 @@
   padding: 100px;
 }
 
+
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
+
+
+@media screen and (max-width: 960px) {
+  .projects > h1 {    
+    font-size: 70px;
+    margin-top: -150px;   
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+    html,body
+  {
+      /* width: 100%; */
+      /* height: 100%; */
+      /* margin: 0px;
+      padding: 0px; */
+      overflow-x: hidden; 
+  }
+
+  .projects > h1 {   
+    /* background-color: green;  */
+    font-size: 30px;
+    margin-top: -150px;   
+  }
+
+  .hero-container > p {
+    font-size: 15px;
+  }
+
+  .btn-mobile {
+    display: block;
+    text-decoration: none;
+  }
+
+  .btn {
+    width: 100%;
+  }
+}
