--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,7 @@
 video {
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 130%;
   position: fixed;
   z-index: -1;
 }
@@ -62,13 +62,14 @@ video {
 }
 
 @media screen and (max-width: 768px) {
-  .hero-container > h1 {    
-    font-size: 50px;
+  .hero-container > h1 {   
+    /* background-color: green;  */
+    font-size: 30px;
     margin-top: -150px;   
   }
 
   .hero-container > p {
-    font-size: 30px;
+    font-size: 15px;
   }
 
   .btn-mobile {
