--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -79,6 +79,12 @@
 }
 
 @media screen and (max-width: 960px) {
+
+  /* .navbar {
+    position: relative;
+    top: 0;
+  } */
+  
   .NavbarItems {
     position: relative;
   }
